style: filter 미선택시 글자 회색으로 수정

--- a/client/src/component/History/History.scss
+++ b/client/src/component/History/History.scss
@@ -25,10 +25,14 @@ main {
       li {
         display: flex;
         gap: 2px;
-      }
 
-      input[type='checkbox'] {
-        width: 16px;
+        input[type='checkbox'] {
+          width: 16px;
+
+          &:not(:checked) + label {
+            color: grey;
+          }
+        }
       }
     }
   }
