feat: 수입, 지출 표시 text type에서 checkbox 타입으로 변경

--- a/client/src/component/InputForm/InputForm.scss
+++ b/client/src/component/InputForm/InputForm.scss
@@ -43,6 +43,23 @@
         display: flex;
         align-items: center;
         gap: 5px;
+
+        label {
+          font-size: 20px;
+          width: 25px;
+        }
+
+        input[type='checkbox'] {
+          display: none;
+
+          &:checked + label::after {
+            content: '+';
+          }
+
+          &:not(:checked) + label::after {
+            content: '⎻';
+          }
+        }
       }
 
       position: relative;
