--- a/client/src/component/History/History.scss
+++ b/client/src/component/History/History.scss
@@ -30,7 +30,7 @@ main {
           width: 16px;
 
           &:not(:checked) + label {
-            color: grey;
+            color: $color-body;
           }
         }
       }
