style: main 공통 속성 분리

--- a/client/src/component/History/History.scss
+++ b/client/src/component/History/History.scss
@@ -1,9 +1,7 @@
 @import '../../style/common.scss';
 
 main {
-  width: 850px;
-  margin: 40px auto;
-  accent-color: $color-primary;
+  margin-top: 40px;
 
   .title {
     display: flex;
