feat: 분류, 결제수단 항목에 이벤트 등록

--- a/client/src/component/InputForm/InputForm.scss
+++ b/client/src/component/InputForm/InputForm.scss
@@ -65,7 +65,7 @@
       position: relative;
 
       .dropdown {
-        // display: none;
+        display: none;
         width: 185px;
         background-color: $color-off-white;
         left: -15px;
