--- a/client/src/component/Calendar/Calendar.scss
+++ b/client/src/component/Calendar/Calendar.scss
@@ -1,6 +1,6 @@
 @import '../../style/common.scss';
 
-.calendar-view {
+.calendar {
   .calendar-header {
     display: flex;
     justify-content: space-around;
