--- a/client/src/component/Calendar/Calendar.scss
+++ b/client/src/component/Calendar/Calendar.scss
@@ -1,6 +1,8 @@
 @import '../../style/common.scss';
 
 .calendar {
+  margin-top: 40px;
+
   .calendar-header {
     display: flex;
     justify-content: space-around;
