design: inputform 패딩 조절

--- a/client/src/component/InputForm/InputForm.scss
+++ b/client/src/component/InputForm/InputForm.scss
@@ -1,6 +1,7 @@
 @import '../../style/common.scss';
 
 .inputForm {
+  padding: 0px 20px;
   display: flex;
   justify-content: center;
   align-items: center;
