--- a/client/src/component/Modal/Modal.scss
+++ b/client/src/component/Modal/Modal.scss
@@ -1,8 +1,8 @@
 @import '../../style/common.scss';
 
 .modal {
-  // display: flex;
-  display: none;
+  display: flex;
+  // display: none;
   width: 100vw;
   height: 100vh;
   font-size: 15px;
@@ -10,7 +10,7 @@
   top: 0;
   left: 0;
 
-  z-index: 1;
+  z-index: 2;
   background-color: #00000000;
   backdrop-filter: blur(10px);
 
