design: 카테고리 리스트 커서 포인터로 변경

--- a/client/src/component/statistics/Statistics.scss
+++ b/client/src/component/statistics/Statistics.scss
@@ -26,6 +26,7 @@
           top: 1px solid $color-label;
           bottom: 1px solid $color-label;
         }
+        cursor: pointer;
         &.active {
           border: {
             top: 2px solid $color-primary;
