design: 달력 푸터 css 추가

--- a/client/src/component/Calendar/Calendar.scss
+++ b/client/src/component/Calendar/Calendar.scss
@@ -92,4 +92,17 @@
       }
     }
   }
+
+  .calendar-footer {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    top: -20px;
+    color: $color-label;
+
+    .sum {
+      display: flex;
+      gap: 10px;
+    }
+  }
 }
