--- a/client/src/component/History/History.scss
+++ b/client/src/component/History/History.scss
@@ -1,6 +1,8 @@
 @import '../../style/common.scss';
 
 .history-view {
+  margin-bottom: 20px;
+
   .title {
     display: flex;
     justify-content: space-between;
