design: 상단 간격 조정

--- a/client/src/component/statistics/Statistics.scss
+++ b/client/src/component/statistics/Statistics.scss
@@ -1,6 +1,8 @@
 @import '../../style/common.scss';
 
 .statistics {
+  margin-bottom: 20px;
+
   .donut {
     display: flex;
     flex-direction: row;
